Fix cta button content alignment

--- a/foundation_cms/static/scss/components/footer.scss
+++ b/foundation_cms/static/scss/components/footer.scss
@@ -205,6 +205,7 @@
     .site-footer-ns__button--cta {
       display: flex;
       align-items: center;
+      justify-content: center;
       background-color: color(orange, "100");
       color: color(neutral, "600");
       width: 100%;
